crates/red_knot_python_semantic/resources/mdtest/snapshots/unresolved-import.md_-_Unresolved_import_diagnostics.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unresolved-import.md - Unresolved import diagnostics
---
# Python source files

## libs/utils.py

```
1 | def add(a: int, b: int) -> int:
2 |     a + b
```

## mdtest_snippet__1.py

```
1 | from utils import add  # error: [unresolved-import]
2 | 
3 | stat = add(10, 15)
```

# Diagnostics

```
error: lint:unresolved-import
 --> /src/mdtest_snippet__1.py:1:1
  |
1 | from utils import add  # error: [unresolved-import]
  | ^^^^^^^^^^^^^^^^^^^^^ Cannot resolve import `utils`
2 |
3 | stat = add(10, 15)
  |

```
